Feature #32: Source file loader and dynamic input switching done

--- a/src/tools/info/styles/style.scss
+++ b/src/tools/info/styles/style.scss
@@ -37,7 +37,10 @@
     height: 20px;
     vertical-align: middle;
 }
+#md_wrapper {
+    padding: 1%;
 
+}
 #md_wrapper pre {
     display: block;
     padding: 9.5px;
